--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "My Moleculer-based microservices project",
   "scripts": {
+    "init" : "git submodule update --init; git submodule update --remote; npm run dev",
+    "pull-docker" : "docker pull mongo",
+    "docker-mongo" : "docker run -d -p 27017:27017 --name mongo mongo",
     "start": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts server/services/*.ts server/services/*/*.ts  server/application/*.ts",
-    "dev": "NODE_ENV=local npm run start",
+    "dev": "NODE_ENV=local ;docker start mongo; npm run start",
     "cli": "moleculer connect NATS",
     "ci": "jest --watch",
     "test": "jest --coverage",
