--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docker-mongo": "docker run -d -p 27017:27017 --name mongo mongo",
     "start": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts server/services/*.ts server/services/*/*.ts  server/application/*.ts",
     "migration": "ts-node -r tsconfig-paths/register server/migration/MigrationFull.ts",
-    "migration-local" : "NODE_ENV=local;docker start mongo; npm run migration",
+    "migration-local": "NODE_ENV=local;docker start mongo; npm run migration",
     "local": "NODE_ENV=local ;docker start mongo; npm run start",
     "cli": "moleculer connect NATS",
     "ci": "jest --watch",
@@ -32,13 +32,16 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "joi": "^17.3.0",
     "migrate-mongo": "^8.1.4",
     "moleculer": "^0.14.10",
     "moleculer-db": "^0.8.4",
     "moleculer-db-adapter-mongo": "^0.4.7",
     "moleculer-decorators": "^1.3.0",
     "moleculer-web": "^0.9.0",
+    "moment": "^2.29.1",
     "nats": "^1.4.12",
+    "sequelize": "^6.3.5",
     "ts-node": "^9.0.0",
     "tsconfig": "^7.0.0",
     "tsconfig-paths": "^3.9.0",
