--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@deckchair-technicians/vice": "^0.1.9",
     "joi": "^17.3.0",
     "migrate-mongo": "^8.1.4",
     "moleculer": "^0.14.10",
