--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "init": "git checkout develop;git submodule update --init; git submodule update --remote;npm i; npm run dev",
     "pull-docker": "docker pull mongo",
     "docker-mongo": "docker run -d -p 27017:27017 --name mongo mongo",
-    "start": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts server/services/*.ts server/services/*/*.ts  server/application/*.ts",
+    "start": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts server/base-service/sequelize/DbServiceSequelize.ts server/services/*.ts server/services/*/*.ts  server/application/*.ts ",
     "migration": "ts-node -r tsconfig-paths/register server/migration/MigrationFull.ts",
     "migration-local": "NODE_ENV=local;docker start mongo; npm run migration",
     "local": "NODE_ENV=local ;docker start mongo; npm run start",
@@ -34,14 +34,17 @@
   "dependencies": {
     "@deckchair-technicians/vice": "^0.1.9",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "migrate-mongo": "^8.1.4",
     "moleculer": "^0.14.10",
     "moleculer-db": "^0.8.4",
     "moleculer-db-adapter-mongo": "^0.4.7",
+    "moleculer-db-adapter-sequelize": "^0.2.10",
     "moleculer-decorators": "^1.3.0",
     "moleculer-web": "^0.9.0",
     "moment": "^2.29.1",
     "nats": "^1.4.12",
+    "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "ts-node": "^9.0.0",
     "tsconfig": "^7.0.0",
