--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pull-docker": "docker pull mongo",
     "docker-mongo": "docker run -d -p 27017:27017 --name mongo mongo",
     "start": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts server/base-service/sequelize/DbServiceSequelize.ts server/services/*.ts server/services/*/*.ts  server/application/*.ts ",
-    "migration": "ts-node -r tsconfig-paths/register server/migration/MigrationFull.ts",
+    "migration": "ts-node -r tsconfig-paths/register ./node_modules/moleculer/bin/moleculer-runner.js --hot --config moleculer.config.ts server/base-service/sequelize/DbServiceSequelize.ts server/services/*.ts server/services/*/*.ts  server/application/*.ts server/migration/MigrationService.ts ",
     "migration-local": "NODE_ENV=local;docker start mongo; npm run migration",
     "local": "NODE_ENV=local ;docker start mongo; npm run start",
     "cli": "moleculer connect NATS",
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@deckchair-technicians/vice": "^0.1.9",
+    "faker": "^5.1.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
