--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
   },
   "dependencies": {
     "@deckchair-technicians/vice": "^0.1.9",
+    "axios": "^0.21.1",
     "faker": "^5.1.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "migrate-mongo": "^8.1.4",
     "moleculer": "^0.14.10",
+    "moleculer-cron": "0.0.2",
     "moleculer-db": "^0.8.4",
     "moleculer-db-adapter-mongo": "^0.4.7",
     "moleculer-db-adapter-sequelize": "^0.2.10",
